# devmind

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CONTEXT.md
.github/workflows/: backend.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py  logger.py  middleware.py  redis.py
backend/tests/: conftest.py
backend/tests/unit/: test_health.py
docs/: API_DESIGN.md  PHASES.md  TECHNICAL_DECISIONS.md
infra/: docker-compose.dev.yml
